テキスト修正

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
           <h1>
             <a href="index.html">
               <!-- 記載番号：1 -->
-              <span class="header__logo-title">Tech Taro</span>
+              <span class="header__logo-title">Kijima Yuto</span>
               <span class="header__logo-sub">Portfolio</span>
             </a>
           </h1>
@@ -39,15 +39,15 @@
             <div class="firstview__info">
               <h2>
                 <!-- 記載番号：2 -->
-                <span class="firstview__info-name">テック 太郎</span>
+                <span class="firstview__info-name">木島 悠斗</span>
                 <!-- 記載番号：3 -->
-                <span class="firstview__info-name-sm">Tech Taro</span>
+                <span class="firstview__info-name-sm">Kijima Yuto</span>
               </h2>
               <ul class="firstview__info-origin-list">
                 <!-- 記載番号：4 -->
-                <li class="firstview__info-origin-item">19xx年x月x日生まれ</li>
+                <li class="firstview__info-origin-item">2000年2月27日生まれ</li>
                 <!-- 記載番号：5 -->
-                <li class="firstview__info-origin-item">東京都出身</li>
+                <li class="firstview__info-origin-item">長野県出身</li>
               </ul>
               <ul class="firstview__info-account-list">
                 <li class="firstview__info-account-item">
@@ -59,7 +59,7 @@
                 </li>
                 <li class="firstview__info-account-item">
                   <!-- 記載番号：7 -->
-                  <a href="__URL__" target="_blank">
+                  <a href="https://github.com/pgyuto" target="_blank">
                     <img src="./images/icon-firstview-info-github.svg" class="firstview__info-account-pict">
                     <span  class="firstview__info-account-name">github</span>
                   </a>
@@ -87,10 +87,9 @@
             </div>
             <ul class="firstview__point-list">
               <!-- 記載番号：10 -->
-              <li class="firstview__point-item">5年の営業経験で培った課題解決スキル×プログラミングスキル</li>
-              <li class="firstview__point-item">プログラミング学習時は、学習進捗が早く1週間前倒しで学習終了</li>
-              <li class="firstview__point-item">オリジナルアプリとして趣味共有SNSを開発</li>
-              <li class="firstview__point-item">アウトプットとして技術系のブログを1日1回以上発信中</li>
+              <li class="firstview__point-item">好奇心を忘れないチャレンジ精神</li>
+              <li class="firstview__point-item">接客業で培ったコミュニケーション力</li>
+              <li class="firstview__point-item">オリジナルアプリとして、服,使用金額管理アプリを開発</li>
             </ul>
           </div>
         </div>
@@ -104,13 +103,13 @@
             <!-- 記載番号：11 -->
             <div class="profile__text-area">
               <p>
-                大学卒業後、2016年4月より都内の電子機器メーカーにて営業として勤務。業務の中で様々なツールがIT化されていること、しかしなかなかその恩恵を受けている人が少ないことに気づき、エンジニアという職への興味を持ちました。
+                工業高校卒業後、製造工場に入社。主に組立作業をやっており、その後接客業の経験をし、人と触れ合うことの楽しさ、コミュニケーションの大切さを学びました。もともと学生時代にプログラムと出会い興味を持ち挑戦をすることを決めました。
               </p>
               <p> 
-                私のモットーは「何事にも主体性を持って臨むこと」です。前職で担当していたある製品の販促プロジェクトは、まだ新卒入社間もない頃に自ら手を挙げて担当させていただくことになりました。様々なクライアントと接してニーズを調査し、それらを販促に活かすようにしてきました。クライアントからの細かな要望についても、自分ごととして考えることで、多くの信頼を得ることができました。
+                私のモットーは「チームを大切にし、自分にできることを主体的にする」です。工場、接客業どちらもチームを意識した働き方がとても大切でした。お礼や、挨拶を大切に今自分にできることを自分から行動することで、チームワークが良くなり、さらに成長できました。
               </p>
               <p>
-                私は、あまねく業務を効率化し、人々がいきいきと働く世の中を作ることが目標です。クライアントと接する中で、様々な業務に追われている方々を見てきました。世の中には様々な効率化ツールがあるにも関わらず、使い方が難しいなどの理由でなかなか導入に至っていないケースが散見されました。そこで、私はどのような人でも使いやすく、ユーザーにとってやさしいプロダクトを作っていきたいと考えています。そこで私は、日々の学習の中で様々なツールに触れることを大切にしています。そこから得たアイディアを、日々のオリジナルアプリ開発に活かすようにしています。
+                私は、自分が作りたいものや、顧客目線に立ったサービスを作成できるエンジニアになりたいと思っています。論理的に組み立てることでイメージを形にすることができるプログラムは、考え方次第でさまざまなサービスを作ることができると思います。そこで私は、顧客目線に立ち、ユーザーの気持ちになって必要とされるサービスを形にしたいと思いました。そのため、自分の知識の引き出しを増やすため、資格の挑戦や、オリジナルアプリの制作で使ったことのないライブラリなどを取り込んで開発をしてみるように心がけています。
               </p>
             </div>
           </div>
@@ -132,7 +131,7 @@
               <!-- 記載番号：13 -->
               <li class="skill__item">
                 <h3>フロントエンド</h3>
-                <h4>JavaScript / jQuery</h4>
+                <h4>JavaScript</h4>
               </li>
               <!-- 記載番号：14 -->
               <li class="skill__item">
@@ -147,7 +146,7 @@
               <!-- 記載番号：16 -->
               <li class="skill__item">
                 <h3>その他</h3>
-                <h4>GitHub / Slack / Trello</h4>
+                <h4>GitHub / Slack</h4>
                 <p>
                   こちらは開発等で使用しているツールです。
                 </p>
@@ -158,8 +157,6 @@
           <div class="skill__text-area">
             <p>
               2021年よりプログラミングスクールでRuby on Railsを中心に学習を開始しました。現在のスキル感について詳細は以下の制作実績をご覧ください。
-              <br>
-              各領域を比較すると特にフロントエンドの開発に興味があり、現在はReactおよびVue.jsを学習しています。
             </p>
           </div>
         </div>
@@ -180,7 +177,7 @@
                   <!-- 記載番号：18 -->
                   <h3>FURIMA（フリマアプリ）</h3>
                   <!-- 記載番号：19 -->
-                  <p>Ruby / Ruby on Rails / MySQL / GitHub / Heroku / Visual Studio Code / Trello</p>
+                  <p>Ruby / Ruby on Rails / MySQL / GitHub / Heroku / Visual Studio Code </p>
                 </div>
                 <div class="works__item-btn-block">
                   <a href="works/01.html" class="button">More</a>
@@ -193,9 +190,9 @@
                 </div>
                 <div class="works__item-text-block">
                   <!-- 記載番号：20 -->
-                  <h3>HOBCHA（趣味共有SNS）</h3>
+                  <h3>Fashion (服、使用金額管理)</h3>
                   <!-- 記載番号：21 -->
-                  <p>Ruby / Ruby on Rails / MySQL / GitHub / Heroku / Visual Studio Code / Trello</p>
+                  <p>Ruby / Ruby on Rails / MySQL / GitHub / Heroku / Visual Studio Code </p>
                 </div>
                 <div class="works__item-btn-block">
                   <a href="works/02.html" class="button">More</a>
@@ -207,7 +204,7 @@
       </section>
     </main>
     <!-- 記載番号：1 -->
-    <footer id="footer" class="footer"><p>&copy; Taro Tech.</p></footer>
+    <footer id="footer" class="footer"><p>&copy; Yuto kijima.</p></footer>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3/dist/jquery.min.js"></script>
     <script type="text/javascript" src="js/ofi.min.js"></script>
     <script type="text/javascript" src="js/script.js"></script>
