--- a/works/02.html
+++ b/works/02.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <!-- 記載番号：2 -->
-    <title>オリアプ（オリジナルアプリ）</title>
+    <title>Fashion (服、使用金額管理)</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style.css" />
   </head>
@@ -13,7 +13,7 @@
           <h1>
             <a href="../">
               <!-- 記載番号：1 -->
-              <span class="header__logo-title">Tech Taro</span>
+              <span class="header__logo-title">Kijima Yuto</span>
               <span class="header__logo-sub">Portfolio</span>
             </a>
           </h1>
@@ -33,7 +33,7 @@
       <section class="p-work-firstview">
         <div class="section-inner">
           <!-- 記載番号：2（記載番号2は5行目にもあるので気をつけてください） -->
-          <h2>HOBCHA（趣味共有SNS）</h2>
+          <h2>Fashion (服、使用金額管理)</h2>
           <div class="p-work-firstview__pict obj-fit-img">
             <!-- images/02に配置した、オリジナルアプリの画像（PC版）のパスを記載する -->
             <img src="../images/work/02/pict-work02-firstview_pc.jpg" class="show-pc">
@@ -43,9 +43,9 @@
           <div class="p-work-firstview__text-area">
             <h3 class="p-work-firstview__text-titile">開発環境</h3>
             <!-- 記載番号：3 -->
-            <p class="p-work-firstview__text">Ruby / Ruby on Rails / MySQL / GitHub / Heroku / Visual Studio Code / Trello</p>
+            <p class="p-work-firstview__text">Ruby / Ruby on Rails / MySQL / GitHub / Heroku / Visual Studio Code</p>
             <!-- 記載番号：4 -->
-            <p class="p-work-firstview__text-link"><a href="__URL__" target="_blank">https://github.com/XXXXXX/xxxxxx</a></p>
+            <p class="p-work-firstview__text-link"><a href="https://github.com/pgyuto/fashion-app" target="_blank">https://github.com/pgyuto/fashion-app</a></p>
           </div>
         </div>
       </section>
@@ -58,12 +58,12 @@
                 <tr>
                   <th>制作時間</th>
                   <!-- 記載番号：5 -->
-                  <td>70時間</td>
+                  <td>80時間</td>
                 </tr>
                 <tr>
                   <th>URL</th>
                   <!-- 記載番号：6 -->
-                  <td><a href="__URL__" target="_blank">http://hoge.heroku.com</a></td>
+                  <td><a href="https://fashion-app-37606.herokuapp.com/" target="_blank">https://fashion-app-37606.herokuapp.com/</a></td>
                 </tr>
                 <tr>
                   <th>ID</th>
@@ -84,12 +84,12 @@
                 <tr>
                   <th>mail</th>
                   <!-- 記載番号：9 -->
-                  <td>test_user@hoge.com</td>
+                  <td>test@test</td>
                 </tr>
                 <tr>
                   <th>PASS</th>
                   <!-- 記載番号：10 -->
-                  <td>testuser1234</td>
+                  <td>111qqq</td>
                 </tr>
               </table>
             </li>
@@ -203,7 +203,7 @@
                   <!-- 記載番号：15 -->
                   <h3>FURIMA（フリマアプリ）</h3>
                   <!-- 記載番号：16 -->
-                  <p>Ruby / Ruby on Rails / MySQL / GitHub / Heroku / Visual Studio Code / Trello</p>
+                  <p>Ruby / Ruby on Rails / MySQL / GitHub / Heroku / Visual Studio Code </p>
                 </div>
                 <div class="p-work-others__item-btn-block">
                   <a href="01.html" class="button">More</a>
@@ -216,9 +216,9 @@
                 </div>
                 <div class="p-work-others__item-text-block">
                   <!-- 記載番号：17 -->
-                  <h3>HOBCHA（趣味共有SNS）</h3>
+                  <h3>Fashion (服、使用金額管理)</h3>
                   <!-- 記載番号：18 -->
-                  <p>Ruby / Ruby on Rails / MySQL / GitHub / Heroku / Visual Studio Code / Trello</p>
+                  <p>Ruby / Ruby on Rails / MySQL / GitHub / Heroku / Visual Studio Code </p>
                 </div>
                 <div class="p-work-others__item-btn-block">
                   <a href="02.html" class="button">More</a>
@@ -230,7 +230,7 @@
       </section>
     </main>
     <!-- 記載番号：1 -->
-    <footer id="footer" class="footer"><p>&copy; Taro Tech.</p></footer>
+    <footer id="footer" class="footer"><p>&copy; Yuto Kijima.</p></footer>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3/dist/jquery.min.js"></script>
     <script type="text/javascript" src="../js/ofi.min.js"></script>
     <script type="text/javascript" src="../js/script.js"></script>
