--- a/works/02.html
+++ b/works/02.html
@@ -105,18 +105,18 @@
             <!-- 記載番号：11 -->
             <div class="p-work-outline__text">
               <p>
-                オリジナルアプリケーションとして、自身の趣味を共有をするSNSを開発しました。
+                自分が持っている服の管理（色、種類、ブランド）をすることができ、さらに毎月使用金額を入力することで、月の使用金額を管理することができます。
                 <br>
-                主な機能は、ユーザー登録機能、および趣味のジャンルごとのタイムライン機能、タグ付け機能です。
+                主な機能は、ユーザー登録機能、服の登録機能、使用金額の登録（計算）機能です。
               </p>
               <p>
-                トップページにアクセスすると、様々な趣味のジャンルについて表示されています。それをクリックすると、そのジャンルにおけるタイムライン機能を閲覧することができます。
+                ユーザー確認ページからユーザーの新規登録を行います。その後服一覧ページの登録ボタンから、服の内容（画像、服の詳細、カテゴリー、カラー、ブランド（任意））を入力し登録することができます。
               </p>
               <p>
-                ユーザー登録をすると、それらのタイムラインに自身の投稿をすることができます。画像を添付することや、YouTubeのリンクを埋め込むことができます。YouTubeの動画については、タイムライン上で再生することができます。
+                服一覧ページの残高ボタンをクリックすると、使用金額の登録をすることができます。￥ ---をクリックし、月に使用できる金額を入力することで設定することができます。
               </p>
               <p>
-                また、投稿をする際はタグ付け（ハッシュタグ）をすることができ、ハッシュタグをクリックすると同一のハッシュタグを持つ投稿のみを閲覧することができます。
+                また、使用金額の編集での自動計算を使う場合は、電卓ボタンを押し使用金額編集ページが表示されたら再度電卓ボタンを押します。表示されたフォームに使用したい金額を入力し,電卓ボタンを押しフォームを閉じます。その後、設定ボタンを押すと使用金額が反映されます。
               </p>
             </div>
           </div>
@@ -130,33 +130,44 @@
               <!-- 記載番号：12 -->
               <div class="p-work-about__item-block">
                 <p>
-                  普段SNSを利用している中で、効率的に情報に接することができていないと課題に感じることがありました。
+                  私は少し前からファッションに興味を持ち始め、「服に使うお金が多い」という課題を抱えていました。
                 </p>
                 <p>
-                  私はサッカー観戦が趣味で、特にイングランドのプレミアリーグの情報をSNSで収集します。しかし、サッカーのジャンルは広く、フォローをしている他のユーザーは他のリーグの情報や、サッカーとは関係のない情報を共有するためそれらの情報がノイズに感じることがありました。またハッシュタグのみでジャンルを管理すると、必ずしも全員がハッシュタグをつけるわけではないので、情報の網羅性に欠けると感じています。
+                  課題を分析した結果、似ている服を買っている時があり、「服、使用できる金額の管理ができていない」」ということが真因であると仮説を立てました。
                 </p>
                 <p>
-                  そこで、5ちゃんねるなどの掲示板の仕組みを参考に、テーマがカテゴライズされたSNSを作成したいと考えました。
+                  同様の課題を抱えている方も多いと推測し、真因を解決するために、使用できる金額、服の管理ができるアプリケーションを開発することにした。
                 </p>
               </div>
             </li>
             <li class="p-work-about__item">
               <h3>開発で工夫したこと</h3>
               <div class="p-work-about__item-block p-work-about__item-block-2column">
-                <div class="p-work-about__item-block-pict obj-fit-img">
+                <!-- <div class="p-work-about__item-block-pict obj-fit-img"> -->
                   <!-- images/02に配置した、記載内容を表す画像のパスを記載する -->
-                  <img src="../images/work/02/pict-work02-about-dammy.jpg">
-                </div>
+                  <!-- <img src="../images/work/02/pict-work02-about-dammy.jpg"> -->
+                <!-- </div> -->
                 <!-- 記載番号：13 -->
                 <div class="p-work-about__item-block-text">
                   <p>
-                    1つ目が本アプリケーションのポイントである趣味ジャンルのカテゴライズ機能です。カテゴリー管理にはancestryというRuby gemを用い、複数改装で管理できるようにしました。また、カテゴリーを各々が作成できる機能を設けました。しかし、これにはある課題が生じ、現在は機能を取り外しています。詳細は後述します。
+                    1.服の絞り込み検索<br>  
+                    複数の条件での絞り込みが可能になるような細い検索機能を実装しました。理由としては、複数の服の登録が考えられるため、目的である「服の管理」をするためには必須の機能だと考えました。そこで使用したことのないransackというgemを使用することで実装をすることができました。
                   </p>
                   <p>
-                    2つ目がタイムラインのUIです。スマートフォンブラウザでの利用を考え、「スマホで見やすい」「スマホでタップしやすい」をテーマにマークアップを行い実装しました。
+                    2.自動計算機能<br>
+                    使用する金額を入力するだけで登録残高から自動で計算をする機能の実装をしました。そのため、使用金額の設定を自分で計算して、編集し直す手間が省かれ、金額管理の部分が使いやすくなりました。また、入力フォーム以外の部分の背景を暗くすることで、入力をする部分をわかりやすくしました。
                   </p>
                   <p>
-                    いずれも、知人20名ほどに実際に利用してもらい、ユーザーヒアリングを行いながら改善を行っています。
+                    3.アイコンボタンによる機能のわかりやすさ<br>
+                    絞り込み検索をするボタンや、登録、残高ボタン、計算ボタンなどを文字を使用したボタンではなく、アイコンボタンにすることで、使用する際に直感的にどのような機能なのかをわかり易いようにしました。
+                  </p>
+                  <p>
+                    4.シンプルな色使いのＣＳＳ<br>
+                    服の管理をするアプリということで、アプリケーションの背景色などで服の色の邪魔をしないように考えながらレイアウトやCSSのデザインにしました。
+                  </p>
+                  <p>
+                    5.N+1問題の可視化<br>
+                    複数のアソシエーションを使う上で気づかないところでN+1問題が発生していることがありました。そのため開発環境でのみ「bullet」というgemを使うことで開発中にN+1問題が発生した際アラートで知らせてくれるように設定しました。そのため発生に気づかないことを回避することができました。
                   </p>
                 </div>
               </div>
@@ -164,22 +175,17 @@
             <li class="p-work-about__item">
               <h3>今後実装したいと思っていること</h3>
               <div class="p-work-about__item-block p-work-about__item-block-2column">
-                <div class="p-work-about__item-block-pict obj-fit-img">
+                <!-- <div class="p-work-about__item-block-pict obj-fit-img"> -->
                   <!-- images/02に配置した、記載内容を表す画像のパスを記載する -->
-                  <img src="../images/work/02/pict-work02-about-dammy.jpg">
-                </div>
+                  <!-- <img src="../images/work/02/pict-work02-about-dammy.jpg"> -->
+                <!-- </div> -->
                 <!-- 記載番号：14 -->
                 <div class="p-work-about__item-block-text">
                   <p>
-                    ActiveAdminなどを用いて、管理機能を設けたいと考えています。理由は2つあります。
+                    現在服のお気に入り機能を実装中。
                   </p>
                   <p>
-                    1つ目が、SNSというサービスの特性上、不適切な投稿を削除できるようにしておく必要があるためです。
-                  </p>
-                  <p>
-                    2つ目が、趣味ジャンルの修正追加を容易に行うためです。前述のとおり、ユーザーにカテゴリーを作成する機能を設けていましたが削除をしました。これは、ユーザーが好き勝手にカテゴリーを登録できてしまうと、重複の可能性があるためです。
-                    <br>
-                    そこで、ユーザーに要望フォームで修正追加したいカテゴリーを投稿をしてもらい、運営側で追加する仕組みを考えています。その運用を実現するために管理機能が必要であると考えています。
+                    今後は、月に使用した金額を可視化できるようにグラフ表示機能などを実装予定。
                   </p>
                 </div>
               </div>
