アイコンコメントアウト

--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
               <ul class="firstview__info-account-list">
                 <li class="firstview__info-account-item">
                   <!-- 記載番号：6 -->
-                  <a href="__URL__" target="_blank">
-                    <img src="./images/icon-firstview-info-qiita.svg" class="firstview__info-account-pict">
-                    <span  class="firstview__info-account-name">Qiita</span>
-                  </a>
+                  <!-- <a href="__URL__" target="_blank"> -->
+                    <!-- <img src="./images/icon-firstview-info-qiita.svg" class="firstview__info-account-pict"> -->
+                    <!-- <span  class="firstview__info-account-name">Qiita</span> -->
+                  <!-- </a> -->
                 </li>
                 <li class="firstview__info-account-item">
                   <!-- 記載番号：7 -->
@@ -66,17 +66,17 @@
                 </li>
                 <li class="firstview__info-account-item">
                   <!-- 記載番号：8 -->
-                  <a href="__URL__" target="_blank">
+                  <!-- <a href="__URL__" target="_blank">
                     <img src="./images/icon-firstview-info-twitter.svg" class="firstview__info-account-pict">
                     <span  class="firstview__info-account-name">Twitter</span>
-                  </a>
+                  </a> -->
                 </li>
                 <li class="firstview__info-account-item">
                   <!-- 記載番号：9 -->
-                  <a href="__URL__" target="_blank">
+                  <!-- <a href="__URL__" target="_blank">
                     <img src="./images/icon-firstview-info-blog.svg" class="firstview__info-account-pict">
                     <span  class="firstview__info-account-name">blog</span>
-                  </a>
+                  </a> -->
                 </li>
               </ul>
             </div>
