モットー修正

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 工業高校卒業後、製造工場に入社。主に組立作業をやっており、その後接客業の経験をし、人と触れ合うことの楽しさ、コミュニケーションの大切さを学びました。もともと学生時代にプログラムと出会い興味を持ち挑戦をすることを決めました。
               </p>
               <p> 
-                私のモットーは「チームを大切にし、自分にできることを主体的にする」です。工場、接客業どちらもチームを意識した働き方がとても大切でした。お礼や、挨拶を大切に今自分にできることを自分から行動することで、チームワークが良くなり、さらに成長できました。
+                私のモットーは「周りの人を大切にし、自分にできることを主体的にする、そして毎日を楽しむ」です。工場、接客業どちらもチームを意識した働き方がとても大切でした。お礼や、挨拶を大切に今自分にできることを自分から行動することで、チームワークが良くなり、さらに成長できました。
               </p>
               <p>
                 私は、自分が作りたいものや、顧客目線に立ったサービスを作成できるエンジニアになりたいと思っています。論理的に組み立てることでイメージを形にすることができるプログラムは、考え方次第でさまざまなサービスを作ることができると思います。そこで私は、顧客目線に立ち、ユーザーの気持ちになって必要とされるサービスを形にしたいと思いました。そのため、自分の知識の引き出しを増やすため、資格の挑戦や、オリジナルアプリの制作で使ったことのないライブラリなどを取り込んで開発をしてみるように心がけています。
